@@ -1,3 +1,7 @@
+2026-01-07  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add category division selection (subcategories, descriptions, payees/payers, or tags) to categories comparison chart
+
 2026-01-06  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Save tags not used by any transaction
